--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^5.0.1"
+    "imagemin-pngquant": "^5.0.1",
+    "gulp-notify": "^3.2.0"
   },
   "dependencies": {
-    "gulp-notify": "^3.2.0"
+    "bootstrap": "^4.0.0"
   }
 }
