--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^4.1.0",
+    "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^5.0.1",
-    "gulp-notify": "^3.2.0"
+    "imagemin-pngquant": "^5.0.1"
   },
   "dependencies": {
     "bootstrap": "^4.0.0"
